@@ -9,7 +9,7 @@ use parent 'Class::Accessor';
 our $VERSION = '1.03';
 
 Travel::Status::DE::VRR::Result->mk_ro_accessors(
-	qw(countdown date delay destination info key line lineref platform
+	qw(countdown date delay destination is_cancelled info key line lineref platform
 	  platform_db sched_date sched_time time type)
 );
 
@@ -17,6 +17,14 @@ sub new {
 	my ( $obj, %conf ) = @_;
 
 	my $ref = \%conf;
+
+	if ($ref->{delay} eq '-9999') {
+		$ref->{delay} = 0;
+		$ref->{is_cancelled} = 1;
+	}
+	else {
+		$ref->{is_cancelled} = 0;
+	}
 
 	return bless( $ref, $obj );
 }
@@ -77,10 +85,8 @@ Actual departure date (DD.MM.YYYY).
 
 =item $departure->delay
 
-Expected delay from scheduled departure time in minutes.
-
-Note that this is only available for DB trains, in other cases it will always
-return 0.
+Expected delay from scheduled departure time in minutes. A delay of 0
+indicates either departure on time or that no delay information is available.
 
 =item $departure->destination
 
@@ -92,6 +98,10 @@ Additional information related to the departure (string).  If departures for
 an address were requested, this is the stop name, otherwise it may be recent
 news related to the line's schedule.  If no information is available, returns
 an empty string.
+
+=item $departure->is_cancelled
+
+1 if the departure got cancelled, 0 otherwise.
 
 =item $departure->key
 
